# Rag-pipeline

./: .gitignore  pyproject.toml
chroma_db/: chroma.sqlite3
notebook/: document.ipynb  pdf-loader.ipynb
